--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Sample</title>
+    <title>Sample Github</title>
   </head>
   <body>
-
+    <div class="new">
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </body>
 </html>
