resolve merge conflicts in div

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Sample Github</title>
   </head>
-  <body>
-    <div class="ne4w">
+  <body>1
+    <div class="new">
       <ul>
         <li></li>
         <li></li>
