--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <li></li>
       </ul>
     </div>
+    <div class="new">
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </body>
 </html>
